updated swagger + minor route changes
