# internals/http/routers.go
@@ -2,6 +2,7 @@ package http
 
 import (
 	"github.com/faramarzQ/sms-gateway-service/internals/http/handlers"
+	"github.com/faramarzQ/sms-gateway-service/internals/middlewares"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -10,16 +11,21 @@ import (
 func RegisterRoutes(ginRouter *gin.Engine,
 	userHandler *handlers.UserHandler,
 	smsHandler *handlers.SMSHandler,
+	rateLimiterMiddleware *middlewares.RateLimitMiddleware,
 ) {
 	ginRouter.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	users := ginRouter.Group("/user")
+	api := ginRouter.Group("/api")
+
+	api.Use(rateLimiterMiddleware.Handler())
+
+	users := api.Group("/user")
 	{
 		users.GET("/:id", userHandler.GetUser)
 		users.PUT("/:id/balance", userHandler.IncreaseBalance)
 	}
 
-	sms := ginRouter.Group("/sms")
+	sms := api.Group("/sms")
 	{
 		sms.POST("/", smsHandler.SendSMS)
 		sms.POST("/batch", smsHandler.SendSMSBatch)
